--- a/src/react/loading/loading.module.scss
+++ b/src/react/loading/loading.module.scss
@@ -34,7 +34,7 @@ $size-large: clamp(80px, 12vw, 190px);
     @extend .overlay;
 }
 
-.fullscreen {
+.full {
     position: fixed;
     top: 0;
     right: 0;
@@ -43,9 +43,14 @@ $size-large: clamp(80px, 12vw, 190px);
 }
 
 .block {
-    position: relative;
-    width: auto;
-    height: auto;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    background: rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(4px);
 }
 
 .container {
