fix: correct loading classname

--- a/src/react/loading/loading.module.scss
+++ b/src/react/loading/loading.module.scss
@@ -27,7 +27,7 @@ $size-large: clamp(80px, 12vw, 190px);
         inset 0 1.5px 8px rgba(255, 255, 255, 0.25);
 }
 
-.fullscreen,
+.full,
 .block {
     pointer-events: none;
 
